--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,13 @@
 <html>
   <head>
     {% if title %}
-    <title>{{ title }} - microblog</title>
+    <title>{{ title }} - PDG</title>
     {% else %}
-    <title>Welcome to microblog</title>
+    <title>Welcome!</title>
     {% endif %}
   </head>
   <body>
-    <div>Microblog: <a href="/">Home</a>
-    <a href="/_index2">Form</a></div>
+    <div>Personalized Drinking Games: <a href="/">Home</a>
     <hr>
     {% block content %}{% endblock %}
   </body>
