--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+      <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <script>
+    $( function() {
+    $(document).tooltip();
+  } );
+  </script>
 </head>
 <body>
   <div class="container">
@@ -19,91 +26,47 @@
   <div class="container">
     <h2>Please complete the following for a personalized drinking experience.</h2>
 
-    <form class="form-inline" role="form">
+    <form action="{{ url_for('get_form') }}" method="post">
       <div class="form-group">
-        <label for="firstname" id="firstname">Name:</label>
-        <input type="text" class="form-control" id="firstname" placeholder="Enter first name">
+      <label for="pwd">First name:</label>
+        <input type="text" class="form-control" name="firstname" placeholder="Enter first name!"></input>
       </div>
       <div class="form-group">
         <label for="pwd">Weight:</label>
-        <input type="password" class="form-control" id="weight" placeholder="Enter weight in lbs">
+        <input type="password" class="form-control" name="weight" placeholder="Enter weight in lbs">
       </div>
       <label class="radio-inline">
-        <input type="radio" name="optradio">Male
+        <input type="radio" name="gender" value="male">Male
       </label>
       <label class="radio-inline">
-        <input type="radio" name="optradio">Female
+        <input type="radio" name="gender" value="female">Female
       </label>
-    </form>
-  </div>
-  <div class="container">
-    <form>
       <h4>What are you drinking?</h4>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Wine (red)</label>
+        <label><input type="checkbox" name="wine(red)">Wine (red)</label>
+        <label><input type="checkbox" name="wine(white)">Wine (white)</label>
+        <label><input type="checkbox" name="vodka">Vodka</label>
+        <label><input type="checkbox" name="champagne">Champagne</label>
+        <label><input type="checkbox" name="whiskey">Whiskey</label>
+        <label><input type="checkbox" name="beer">Beer</label>
+      </div>
+      <h4>How drunk do you want to be?</h4>
+      <div class="checkbox">
+        <label><input type="radio" id="buzzed" name="drunk" title="BAC=0.05" value="buzzed"> Buzzed</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Wine (white)</label>
+        <label><input type="radio" id="tipsy" name="drunk" value="tipsy" title="BAC=0.1"> Tipsy</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Vodka</label>
+        <label><input type="radio" id="hammered" name="drunk" value="hammered" title="BAC=0.18"> Hammered</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Champagne</label>
+        <label><input type="radio" title="BAC=0.3" id="blackout" name="drunk" value="blackout"> Blackout</label>
       </div>
-      <div class="checkbox">
-        <label><input type="checkbox" value="">Whiskey</label>
-      </div>
-      <div class="checkbox disabled">
-        <label><input type="checkbox" value="" disabled>Beer</label>
-      </div>
-    </form>
-  </div><div class="container">
-  <form>
-    <h4>How drunk do you want to be?</h4>
-    <div class="checkbox">
-      <label><input type="checkbox" name="buzzed" value="">Buzzed</label>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" name="tipsy" value="">Tipsy</label>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" name="sloppy" value="">Sloppy</label>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" name="hammered" value="">Hammered</label>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" name="blackout" value="">Blackout</label>
-    </div>
 
-    <button type="submit" class="btn btn-default">Submit</button>
-  </form>
-</div>
+      <input type="submit" value="Submit"></form>
+ 
+  </div>
 
 
-<!-- FUNCTION TO GET CHANCE FROM YOUR PREDICTOR WITH AJAX AND CHANGE BAR  HEIGHT -->
-<script>
-
-
-
-  function getAndDrawChance(name, weight){
-   $.ajax({
-     type: "POST",
-     contentType: "application/json; charset=utf-8",
-     url: "/_sips",
-     dataType: "json",
-     async: true,
-     data: "{\"example\": ["+name+","+weight+"]}",
-     success: function (data) {
-       console.log($(firstname).val());
-       console.log($(id).val());
-     },
-     error: function (result) {
-     }
-   })
- }
-
-</script>
-
-{% endblock %}
+  {% endblock %}
