--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -2,7 +2,7 @@
 {% block content %}
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <div class="page-header">
   <h1>{{ name }}'s Bachelor in Paradise Drinking Game! <small>Play at your own risk...</small></h1>
 
