--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,14 +36,14 @@
         <input type="password" class="form-control" name="weight" placeholder="Enter weight in lbs">
       </div>
       <label class="radio-inline">
-        <input type="radio" name="gender" value="male">Male
+        <input type="radio" name="gender" value="male" checked>Male
       </label>
       <label class="radio-inline">
         <input type="radio" name="gender" value="female">Female
       </label>
       <h4>What are you drinking?</h4>
       <div class="checkbox">
-        <label><input type="checkbox" name="wine(red)">Wine (red)</label>
+        <label><input type="checkbox" name="wine(red)" checked>Wine (red)</label>
         <label><input type="checkbox" name="wine(white)">Wine (white)</label>
         <label><input type="checkbox" name="vodka">Vodka</label>
         <label><input type="checkbox" name="champagne">Champagne</label>
@@ -52,7 +52,7 @@
       </div>
       <h4>How drunk do you want to be?</h4>
       <div class="checkbox">
-        <label><input type="radio" id="buzzed" name="drunk" title="BAC=0.05" value="buzzed"> Buzzed</label>
+        <label><input type="radio" id="buzzed" name="drunk" title="BAC=0.05" value="buzzed" checked> Buzzed</label>
       </div>
       <div class="checkbox">
         <label><input type="radio" id="tipsy" name="drunk" value="tipsy" title="BAC=0.1"> Tipsy</label>
