--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     {% endif %}
   </head>
   <body>
-    <div>Personalized Drinking Games: <a href="/">Home</a>
+    <div>Customizable Drinking Games: <a href="/">   Home   </a><a href="/_bip">   BiP   </a><a href="/_olympics">   Olympics   </a>
     <hr>
     {% block content %}{% endblock %}
   </body>
