--- a/app/templates/temp.html
+++ b/app/templates/temp.html
@@ -6,12 +6,10 @@
  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
  <div class="jumbotron">
- <div class="container">
- <h1>Customizable Drinking Games</h1>
+ <h1>>Customizable Drinking Games</h1>
   <p>What are you watching?</p>
-  <p><a class="btn btn-primary btn-lg" href="_olympics" role="button">Rio Olympics 2016</a>
-<a class="btn btn-primary btn-lg" href="_bip" role="button">Bachelor in Paradise</a></p>
-</div>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Rio Olympics 2016</a></p>
+<p><a class="btn btn-primary btn-lg" href="#" role="button">Bachelor in Paradise</a></p>
 </div>
 
 {% endblock %}
