--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -4,7 +4,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <div class="page-header">
-  <h1>{{ name }}'s Bachelor in Paradise Drinking Game! <small>Play at your own risk...</small></h1>
+  <h1>{{ name }}'s {{ show }} Drinking Game! <small>Play at your own risk...</small></h1>
 
 <!--<p>{{ weight}}</p>-->
 <!--<p>{{ gender }}</p>-->
