--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -24,7 +24,7 @@ console.log(arr)
 </script>
 
 
-
+<p> Don't like you game? Refresh the page for a new one!</p>
 <!-- AddToAny BEGIN -->
 <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
 <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
