--- a/app/templates/olympics.html
+++ b/app/templates/olympics.html
@@ -10,11 +10,12 @@
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.min.js"></script>
   <script>
     $( function() {
       $(document).tooltip();
     } );
+
   </script>
 </head>
 <body>
@@ -46,23 +47,25 @@
 
       <div class="form-group">
 
-            <h4>Which events are you watching?</h4>
-        <label for="sel1" class='col-xs-3 control-label'></label>
-        <select class="form-control" id="sel1" multiple>
-          <option></option>
-          <option>Swimming</option>
-          <option>Gymnastics</option>
-          <option>Track</option>
-          <option>Basketball</option>
-          <option>Field Hockey</option>
-          <option>Equestrian</option>
-          <option>Tennis</option>
-          <option>Golf</option>
-          <option>Whatever's on NBC</option>
-        </select>
+        <h4>Which events are you watching?</h4>
+        <div class="checkbox">
+        <label><input type="checkbox" name="sports" checked value="general">Whatever's playing</label>
+          <label><input type="checkbox" name="sports" value="swimming">Swimming</label>
+          <label><input type="checkbox" name="sports" value="gymnastics_women">Gymnastics (women)</label>
+           <label><input type="checkbox" name="sports" value="gymnastics_men">Gymnastics (men)</label>
+          <label><input type="checkbox" name="sports" value="track">Track</label>
+          <label><input type="checkbox" name="sports" value="basketball">Basketball</label>
+          <label><input type="checkbox" name="sports" value="field_hockey">Field Hockey</label>
+          <label><input type="checkbox" name="sports" value="equestrian">Equestrian</label>
+          <label><input type="checkbox" name="sports" value="tennis">Tennis</label>
+          <label><input type="checkbox" name="sports" value="golf">Golf</label>
+          <label><input type="checkbox" name="sports" value="table_tennis">Table Tennis</label>
+          <label><input type="checkbox" name="sports" value="beach_volleyball">Beach Volleyball</label>
+          <label><input type="checkbox" name="sports" value="fencing">Fencing</label>
+        </div>
 
       </div>
-            <h4>What are you drinking?</h4>
+      <h4>What are you drinking?</h4>
       <div class="checkbox">
         <label><input type="checkbox" name="wine(red)" checked>Wine (red)</label>
         <label><input type="checkbox" name="wine(white)">Wine (white)</label>
