--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
   <p>What are you watching?</p>
   <p><a class="btn btn-primary btn-lg" href="_olympics" role="button">Rio Olympics 2016</a>
 <a class="btn btn-primary btn-lg" href="_bip" role="button">Bachelor in Paradise</a></p>
+<a class="btn btn-primary btn-lg" href="/" role="button">Create your own! (Coming soon)</a></p>
 </div>
 </div>
 
