--- a/app/templates/olympics.html
+++ b/app/templates/olympics.html
@@ -38,6 +38,10 @@
         <label for="pwd">Weight:</label>
         <input type="password" class="form-control" name="weight" placeholder="Enter weight in lbs">
       </div>
+        <div class="form-group">
+        <label for="pwd">Time</label>
+        <input type="password" class="form-control" name="hours" placeholder="How long will you be watching?">
+      </div>
       <label class="radio-inline">
         <input type="radio" name="gender" value="male" checked>Male
       </label>
