--- a/app/templates/olympics.html
+++ b/app/templates/olympics.html
@@ -39,8 +39,20 @@
         <input type="password" class="form-control" name="weight" placeholder="Enter weight in lbs">
       </div>
         <div class="form-group">
-        <label for="pwd">Time</label>
-        <input type="password" class="form-control" name="hours" placeholder="How long will you be watching?">
+        <label for="pwd">Time:</label>
+      <label class="radio-inline">
+        <input type="radio" name="gender" value="one_hr" checked>1 hr
+      </label>
+      <label class="radio-inline">
+        <input type="radio" name="gender" value="one_and_half_hr">1.5 hr
+      </label>
+            <label class="radio-inline">
+        <input type="radio" name="gender" value="two_hr">2 hrs
+      </label>
+            <label class="radio-inline">
+        <input type="radio" name="gender" value="two_plus_hr">2+ hrs
+      </label>
+      
       </div>
       <label class="radio-inline">
         <input type="radio" name="gender" value="male" checked>Male
