--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,8 @@
     {% endif %}
   </head>
   <body>
-    <div>Customizable Drinking Games: <a href="/">   Home   </a><a href="/_bip">   BiP   </a><a href="/_olympics">   Olympics   </a>
+
+    <div><img src='/static/images/martini.svg' alt='martini glass' style="width:50px;height:50px;">Customizable Drinking Games: <a href="/">   Home   </a><a href="/_bip">   BiP   </a><a href="/_olympics">   Olympics   </a>
     <hr>
     {% block content %}{% endblock %}
   </body>
