--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,15 +1,22 @@
-<html>
-  <head>
-    {% if title %}
-    <title>{{ title }} - PDG</title>
-    {% else %}
-    <title>Welcome!</title>
-    {% endif %}
-  </head>
-  <body>
+{% extends "bootstrap/base.html" %}
 
-    <div><img src='/static/images/martini.svg' alt='martini glass' style="width:50px;height:50px;">Customizable Drinking Games: <a href="/">   Home   </a><a href="/_bip">   BiP   </a><a href="/_olympics">   Olympics   </a>
-    <hr>
-    {% block content %}{% endblock %}
-  </body>
-</html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+{% if title %}
+<title>{{ title }} - PDG</title>
+{% else %}
+<title>Welcome!</title>
+{% endif %}
+
+{% block navbar %}
+<div><img src='/static/images/martini.svg' alt='martini glass' style="width:50px;height:50px;">Customizable Drinking Games: <a href="/">   Home   </a><a href="/_debate">   Debate   </a><a href="/_bip">   BiP   </a><a href="/_olympics">   Olympics   </a>
+  {% endblock %}
+
+  {% block content %}
+  {% endblock %}
+
