--- a/app/templates/custom.html
+++ b/app/templates/custom.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
+
 {% block content %}
-<head>
-  <title>Olympics</title>
-  <meta charset="utf-8">
+
+<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -11,31 +11,26 @@
   <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.min.js"></script>
-  <script>
-    $( function() {
-      $(document).tooltip();
-    } );
-
-  </script>
-</head>
-<body>
-  <div class="container">
+<div class="container">
     <div class="jumbotron">
-      <h1>2016 Rio Olympics: The Drinking Game</h1> 
+      <h1>Custom Game</h1> 
       <p>Play at your own risk!</p> 
     </div>
   </div>
-
   <div class="container">
     <h2>Please complete the following for a personalized drinking experience.</h2>
 
-    <form action="{{ url_for('get_form_olympics') }}" method="post">
+    <form action="{{ url_for('get_form_custom') }}" method="post">
+          <div class="form-group">
+        <label for="pwd">Show name:</label>
+        <input type="text" class="form-control" name="show" placeholder="Enter show name!"></input>
+      </div>
       <div class="form-group">
         <label for="pwd">First name:</label>
         <input type="text" class="form-control" name="firstname" placeholder="Enter first name!"></input>
       </div>
       <div class="form-group">
-        <label for="pwd">Weight:</label>
+        <label for="pwd">Weight: (must be a number!)</label>
         <input type="password" class="form-control" name="weight" placeholder="Enter weight in lbs">
       </div>
         <div class="form-group">
@@ -61,26 +56,6 @@
         <input type="radio" name="gender" value="female">Female
       </label>
 
-      <div class="form-group">
-
-        <h4>Which events are you watching?</h4>
-        <div class="checkbox">
-        <label><input type="checkbox" name="sports" checked value="general">Whatever's playing</label>
-          <label><input type="checkbox" name="sports" value="swimming">Swimming</label>
-          <label><input type="checkbox" name="sports" value="gymnastics_women">Gymnastics (women)</label>
-           <label><input type="checkbox" name="sports" value="gymnastics_men">Gymnastics (men)</label>
-          <label><input type="checkbox" name="sports" value="track">Track</label>
-          <label><input type="checkbox" name="sports" value="basketball">Basketball</label>
-          <label><input type="checkbox" name="sports" value="field_hockey">Field Hockey</label>
-          <label><input type="checkbox" name="sports" value="equestrian">Equestrian</label>
-          <label><input type="checkbox" name="sports" value="tennis">Tennis</label>
-          <label><input type="checkbox" name="sports" value="golf">Golf</label>
-          <label><input type="checkbox" name="sports" value="table_tennis">Table Tennis</label>
-          <label><input type="checkbox" name="sports" value="beach_volleyball">Beach Volleyball</label>
-          <label><input type="checkbox" name="sports" value="fencing">Fencing</label>
-        </div>
-
-      </div>
       <h4>What are you drinking?</h4>
       <div class="radio">
         <label><input type="radio" name="alc" value="0.13" checked>Wine (red)</label>
@@ -103,11 +78,13 @@
       <div class="checkbox">
         <label><input type="radio" title="BAC=0.3" id="blackout" name="drunk" value="0.3"> Blackout</label>
       </div>
+      <div class="form-group">
+  <label for="custom">Conditions:</label>
+  <textarea class="form-control" rows="5" name="conditions">Please give a frequency (1-3) for each condition, and separate conditions with commas. Eg) Example condition 1: 3, Example condition 2:1</textarea>
+</div>
 
       <input type="submit" value="Submit"></form>
 
     </div>
 
-
-
-    {% endblock %}
+{% endblock %}
