--- a/app/templates/debate.html
+++ b/app/templates/debate.html
@@ -1,26 +1,21 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block content %}
 <head>
   <title>BiP</title>
-  <script>
-    $( function() {
-    $(document).tooltip();
-  } );
-  </script>
 </head>
+{% block content %}
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>ABC's Bachelor in Paradise: The Drinking Game</h1> 
+      <h1>Hillary vs. Trump: The Drinking Game</h1> 
       <p>Play at your own risk!</p> 
     </div>
   </div>
 
   <div class="container">
     <h2>Please complete the following for a personalized drinking experience.</h2>
-   {{ wtf.quick_form(form) }}
 
+   {{ wtf.quick_form(form) }}
 
   {% endblock %}
