--- a/app/templates/debate.html
+++ b/app/templates/debate.html
@@ -2,13 +2,13 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 <head>
-  <title>BiP</title>
+  <title>Debates</title>
 </head>
 {% block content %}
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>Hillary vs. Trump: The Drinking Game</h1> 
+      <h1><span style="color:blue;">Hillary</span> vs. <span style="color:red;">Trump</span>: The Drinking Game</h1> 
       <p>Play at your own risk!</p> 
     </div>
   </div>
