--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,9 +14,29 @@
 {% endif %}
 
 {% block navbar %}
-<div><img src='/static/images/martini.svg' alt='martini glass' style="width:50px;height:50px;">Customizable Drinking Games: <a href="/">   Home   </a><a href="/_debate">   Debate   </a><a href="/_bip">   BiP   </a><a href="/_olympics">   Olympics   </a>
-  {% endblock %}
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-  {% block content %}
-  {% endblock %}
+            <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('get_form_bip') }}">Bip</a></li>
+                <li><a href="{{ url_for('get_form_debate') }}">Debates</a></li>
+                <li><a href="{{ url_for('get_form_olympics') }}">Olympics</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block content %}
+{% endblock %}
 
